<resources>
    <string name="app_name">Inventory</string>

    <string name="item_name">Name</string>
    <string name="item_quantity">Qty</string>
    <string name="item_supplier">Supplier</string>
    <string name="item_date">Date of entry</string>
    <string name="item_price">Unit price</string>
    <string name="btn_save">SAVE</string>
    <string name="title_new_inventory">New Inventory</string>
    <string name="title_edit_inventory">Edit Inventory</string>
    <string name="item_rupiah">Rp.</string>
</resources>