<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E7FA"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_save"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_edit_inventory"
                    android:textColor="@color/color_dark_grey"
                    android:textSize="@dimen/font_16"
                    android:gravity="center"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginStart="@dimen/dimen_6"
                android:layout_marginEnd="@dimen/dimen_6"
                app:cardCornerRadius="@dimen/dimen_2"
                app:cardElevation="@dimen/dimen_2"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/ll_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/dimen_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/item_name"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="@dimen/font_16" />


                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginStart="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_6"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:background="@drawable/bg_round_input"
                        android:gravity="center"
                        android:padding="@dimen/dimen_10"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/font_14"
                        android:text=""/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/item_quantity"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="@dimen/font_16" />

                    <EditText
                        android:id="@+id/edt_qty_update"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginStart="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:background="@drawable/bg_round_input"
                        android:gravity="center"
                        android:padding="@dimen/dimen_10"
                        android:textColor="@color/color_grey"
                        android:textColorHint="@color/color_grey"
                        android:textSize="@dimen/font_14"
                        android:inputType="number"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/item_supplier"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:id="@+id/tv_supplier"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginStart="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:background="@drawable/bg_round_input"
                        android:gravity="center"
                        android:text=""
                        android:padding="@dimen/dimen_10"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/font_14"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/item_date"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="@dimen/font_16" />

                    <LinearLayout
                        android:id="@+id/ll_date"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:background="@drawable/bg_round_input"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_16">

                        <TextView
                            android:id="@+id/tv_date_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text=""
                            android:textColor="@color/color_dark_grey"
                            android:textSize="@dimen/font_14"
                            android:gravity="center"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:text="@string/item_price"
                        android:textColor="@color/color_dark_grey"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginStart="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginEnd="@dimen/dimen_16"
                        android:background="@drawable/bg_round_input"
                        android:gravity="center"
                        android:text=""
                        android:padding="@dimen/dimen_10"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/font_14"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ll_save_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textSize="@dimen/font_18"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>